--- a/app/assets/stylesheets/layout/_main.scss
+++ b/app/assets/stylesheets/layout/_main.scss
@@ -74,6 +74,6 @@ a {
 
 @media screen and (max-width: 600px) {
   .main {
-    max-width: 300px;
+    max-width: 280px;
   }
 }
